--- a/go_proxy.service
+++ b/go_proxy.service
@@ -9,7 +9,7 @@ Type=simple
 # User=go_proxy
 # Group=go_proxy
 WorkingDirectory=/opt/st_proxy
-ExecStart=/opt/st_proxy/go_proxy -prefix="/api/" -backend="https://chat-stage.sensetime.com/api/test-cancel/v0.0.1/" -port=":8080"
+ExecStart=/opt/st_proxy/go_proxy -prefix="/api/" -backend="https://chat-stage.sensetime.com/api/jt-adm/v0.0.1/" -port=":8080"
 # ExecReload=/bin/kill -HUP $MAINPID
 Restart=always
 RestartSec=5
